--- a/src/main/resources/templates/layout/adminlayout/sidebar.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar.html
@@ -30,8 +30,8 @@
                     <p>User</p>
                 </a>
             </li>
-            <li class="nav-item " th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
-                <a class="nav-link" href="/listProductUser">
+            <li class="nav-item ">
+                <a class="nav-link" href="/listproduct">
                     <i class="material-icons">content_paste</i>
                     <p>Table List</p>
                 </a>
