--- a/src/main/resources/templates/listProductUser.html
+++ b/src/main/resources/templates/listProductUser.html
@@ -11,7 +11,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-header-primary">
-                        <h4 class="card-title ">Product User </h4>
+                        <h4 class="card-title ">Product</h4>
                     </div>
                     <div class="card-body">
                         <a href="/createproduct" class="btn btn-primary">Create product</a>
