--- a/src/main/resources/templates/listorder.html
+++ b/src/main/resources/templates/listorder.html
@@ -29,12 +29,13 @@
                                     <tbody>
                                     <tr th:each="ord : ${orderItem}">
                                         <td th:text="${ord.phone}"></td>
-                                        <td th:text="${ord.description}"></td>
                                         <td th:text="${ord.address}"></td>
                                         <td th:text="${ord.fullname}"></td>
                                         <td th:text="${ord.subtotal}"></td>
                                         <td th:text="${ord.status}"></td>
-                                        <td><a href="#" class="btn btn-primary">Received</a> </td>
+                                        <td><a href="#" class="btn btn-primary">Received</a>
+                                            <a class="btn btn-success" th:href="@{/orderdetail(id=${ord.orderid})}">Detail</a>
+                                        </td>
                                     </tr>
                                     </tbody>
                                 </table>
