--- a/src/main/resources/templates/listorder.html
+++ b/src/main/resources/templates/listorder.html
@@ -19,7 +19,6 @@
                                 <table class="table">
                                     <thead class=" text-primary">
                                     <th scope="col">Phone</th>
-                                    <th scope="col">Description</th>
                                     <th scope="col">Address</th>
                                     <th scope="col">fullname</th>
                                     <th scope="col">Price total</th>
@@ -39,13 +38,13 @@
                                     </tr>
                                     </tbody>
                                 </table>
-                                <nav aria-label="Page navigation">
-                                    <ul class="pagination">
-                                        <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
-                                            <a class="page-link" th:href="@{/listorder(size=${size}, page=${t})}" th:text="${t+1}"></a>
-                                        </li>
-                                    </ul>
-                                </nav>
+<!--                                <nav aria-label="Page navigation">-->
+<!--                                    <ul class="pagination">-->
+<!--                                        <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">-->
+<!--                                            <a class="page-link" th:href="@{/listorder(size=${size}, page=${t})}" th:text="${t+1}"></a>-->
+<!--                                        </li>-->
+<!--                                    </ul>-->
+<!--                                </nav>-->
                             </div>
                         </div>
                     </div>
