--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -66,7 +66,7 @@
                                             </svg>
                                         </a>
 
-                                        <a href="category.html" class="btn-layout">
+                                        <a href="listproductcategory.html" class="btn-layout">
                                             <svg width="16" height="10">
                                                 <rect x="0" y="0" width="4" height="4"></rect>
                                                 <rect x="6" y="0" width="4" height="4"></rect>
@@ -118,6 +118,9 @@
                                                     </div><!-- End .ratings -->
                                                     <span class="ratings-text">( 6 Reviews )</span>
                                                 </div><!-- End .rating-container -->
+                                                <div class="username">
+                                                    <a th:href="@{/selleruser(username=${product.user.username})}" th:text="${product.user.username}"></a>
+                                                </div>
                                             </div><!-- End .product-body -->
                                         </div><!-- End .product -->
                                     </div><!-- End .col-sm-6 col-lg-4 col-xl-3 -->
@@ -150,69 +153,69 @@
                                     <div class="collapse show" id="widget-1">
                                         <div class="widget-body">
                                             <div class="filter-items filter-items-count">
-                                                <div class="filter-item">
+                                                <div class="filter-item"  th:each="category : ${categorys}">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-1">
-                                                        <label class="custom-control-label" for="cat-1">Dresses</label>
+                                                        <a  th:href="@{/list_product_category(name=${category.name})}" class="custom-control-label" for="cat-1" th:text="${category.name}"></a>
                                                     </div><!-- End .custom-checkbox -->
                                                     <span class="item-count">3</span>
                                                 </div><!-- End .filter-item -->
 
-                                                <div class="filter-item">
+                                <!--                <div class="filter-item">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-2">
                                                         <label class="custom-control-label" for="cat-2">T-shirts</label>
-                                                    </div><!-- End .custom-checkbox -->
+                                                    </div>&lt;!&ndash; End .custom-checkbox &ndash;&gt;
                                                     <span class="item-count">0</span>
-                                                </div><!-- End .filter-item -->
+                                                </div>&lt;!&ndash; End .filter-item &ndash;&gt;
 
                                                 <div class="filter-item">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-3">
                                                         <label class="custom-control-label" for="cat-3">Bags</label>
-                                                    </div><!-- End .custom-checkbox -->
+                                                    </div>&lt;!&ndash; End .custom-checkbox &ndash;&gt;
                                                     <span class="item-count">4</span>
-                                                </div><!-- End .filter-item -->
+                                                </div>&lt;!&ndash; End .filter-item &ndash;&gt;
 
                                                 <div class="filter-item">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-4">
                                                         <label class="custom-control-label" for="cat-4">Jackets</label>
-                                                    </div><!-- End .custom-checkbox -->
+                                                    </div>&lt;!&ndash; End .custom-checkbox &ndash;&gt;
                                                     <span class="item-count">2</span>
-                                                </div><!-- End .filter-item -->
+                                                </div>&lt;!&ndash; End .filter-item &ndash;&gt;
 
                                                 <div class="filter-item">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-5">
                                                         <label class="custom-control-label" for="cat-5">Shoes</label>
-                                                    </div><!-- End .custom-checkbox -->
+                                                    </div>&lt;!&ndash; End .custom-checkbox &ndash;&gt;
                                                     <span class="item-count">2</span>
-                                                </div><!-- End .filter-item -->
+                                                </div>&lt;!&ndash; End .filter-item &ndash;&gt;
 
                                                 <div class="filter-item">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-6">
                                                         <label class="custom-control-label" for="cat-6">Jumpers</label>
-                                                    </div><!-- End .custom-checkbox -->
+                                                    </div>&lt;!&ndash; End .custom-checkbox &ndash;&gt;
                                                     <span class="item-count">1</span>
-                                                </div><!-- End .filter-item -->
+                                                </div>&lt;!&ndash; End .filter-item &ndash;&gt;
 
                                                 <div class="filter-item">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-7">
                                                         <label class="custom-control-label" for="cat-7">Jeans</label>
-                                                    </div><!-- End .custom-checkbox -->
+                                                    </div>&lt;!&ndash; End .custom-checkbox &ndash;&gt;
                                                     <span class="item-count">1</span>
-                                                </div><!-- End .filter-item -->
+                                                </div>&lt;!&ndash; End .filter-item &ndash;&gt;
 
                                                 <div class="filter-item">
                                                     <div class="custom-control custom-checkbox">
                                                         <input type="checkbox" class="custom-control-input" id="cat-8">
                                                         <label class="custom-control-label" for="cat-8">Sportwear</label>
-                                                    </div><!-- End .custom-checkbox -->
+                                                    </div>&lt;!&ndash; End .custom-checkbox &ndash;&gt;
                                                     <span class="item-count">0</span>
-                                                </div><!-- End .filter-item -->
+                                                </div>&lt;!&ndash; End .filter-item &ndash;&gt;-->
                                             </div><!-- End .filter-items -->
                                         </div><!-- End .widget-body -->
                                     </div><!-- End .collapse -->
