--- a/src/main/resources/templates/buyer_order.html
+++ b/src/main/resources/templates/buyer_order.html
@@ -2,7 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/adminlayout/template_admin.html}">
-
+<head>
+    <title>Buyer order</title>
+</head>
 <body>
 <div class="main-panel" layout:fragment="content">
     <div class="content">
@@ -12,7 +14,6 @@
                     <div class="card">
                         <div class="card-header card-header-primary">
                             <h4 class="card-title ">Product admin</h4>
-                            <p class="card-category"><a href="/createproduct">add</p>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
