--- a/src/main/resources/templates/listproduct.html
+++ b/src/main/resources/templates/listproduct.html
@@ -23,7 +23,7 @@
                                     <th scope="col">Price</th>
                                     <th scope="col">Quantity</th>
                                     <th scope="col">Description</th>
-<!--                                    <th scope="col">createdAt</th>-->
+                                    <th scope="col">createdAt</th>
                                     <th scope="col"></th>
                                     </thead>
                                     <tbody>
@@ -34,7 +34,7 @@
                                         <td th:text="${product.price}"></td>
                                         <td th:text="${product.quantity}"></td>
                                         <td th:text="${product.description}"></td>
-<!--                                        <td th:text="${product.createdAt}"></td>-->
+                                        <td th:text="${product.createdAt}"></td>
                                         <td><a th:href="@{/updateproduct(id=${product.productid})}" th:text="Edit"></a></td>
                                     </tr>
                                     </tbody>
