--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <aside class="col-md-4 col-lg-3">
                         <ul class="nav nav-dashboard flex-column mb-3 mb-md-0" role="tablist">
-                            <li class="nav-item">
+                           <!-- <li class="nav-item">
                                 <a class="nav-link active" id="tab-dashboard-link" data-toggle="tab" href="#tab-dashboard" role="tab" aria-controls="tab-dashboard" aria-selected="true">Dashboard</a>
                             </li>
                             <li class="nav-item">
@@ -40,7 +40,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="tab-list-buyer" data-toggle="tab" href="#tab-buyer" role="tab" aria-controls="tab-buyer" aria-selected="false">Buyer orders</a>
-                            </li>
+                            </li>-->
                             <li class="nav-item">
                                 <a class="nav-link" id="tab-address-link" data-toggle="tab" href="#tab-address" role="tab" aria-controls="tab-address" aria-selected="false">Adresses</a>
                             </li>
@@ -55,11 +55,11 @@
 
                     <div class="col-md-8 col-lg-9">
                         <div class="tab-content">
-                            <div class="tab-pane fade show active" id="tab-dashboard" role="tabpanel" aria-labelledby="tab-dashboard-link">
+                          <!--  <div class="tab-pane fade show active" id="tab-dashboard" role="tabpanel" aria-labelledby="tab-dashboard-link">
                                 <p>Hello <span class="font-weight-normal text-dark">User</span> (not <span class="font-weight-normal text-dark">User</span>? <a href="#">Log out</a>)
                                     <br>
                                     From your account dashboard you can view your <a href="#tab-orders" class="tab-trigger-link link-underline">recent orders</a>, manage your <a href="#tab-address" class="tab-trigger-link">shipping and billing addresses</a>, and <a href="#tab-account" class="tab-trigger-link">edit your password and account details</a>.</p>
-                            </div><!-- .End .tab-pane -->
+                            </div>&lt;!&ndash; .End .tab-pane &ndash;&gt;
 
                             <div class="tab-pane fade" id="tab-orders" role="tabpanel" aria-labelledby="tab-orders-link">
                                 <div class="col-lg-12">
@@ -79,20 +79,20 @@
                                                 <div class="product">
                                                     <h3 class="product-title">
                                                         <a href="#">Beige knitted elastic runner shoes</a>
-                                                    </h3><!-- End .product-title -->
-                                                </div><!-- End .product -->
+                                                    </h3>&lt;!&ndash; End .product-title &ndash;&gt;
+                                                </div>&lt;!&ndash; End .product &ndash;&gt;
                                             </td>
                                             <td class="price-col">$84.00</td>
                                             <td class="quantity-col">
-                                                <div class="cart-product-quantity">8</div><!-- End .cart-product-quantity -->
+                                                <div class="cart-product-quantity">8</div>&lt;!&ndash; End .cart-product-quantity &ndash;&gt;
                                             </td>
                                             <td class="total-col">$84.00</td>
                                             <td class="remove-col"><button class="btn-remove"><i class="icon-close"></i></button></td>
                                         </tr>
                                         </tbody>
-                                    </table><!-- End .table table-wishlist -->
+                                    </table>&lt;!&ndash; End .table table-wishlist &ndash;&gt;
                                 </div>
-                              </div><!-- .End .tab-pane -->
+                              </div>&lt;!&ndash; .End .tab-pane &ndash;&gt;
 
                             <div class="tab-pane fade" id="tab-downloads" role="tabpanel" aria-labelledby="tab-downloads-link">
                                 <div class="col-lg-12">
@@ -115,12 +115,12 @@
                                                 <div class="product">
                                                     <h3 class="product-title">
                                                         <a href="#">Beige knitted elastic runner shoes</a>
-                                                    </h3><!-- End .product-title -->
-                                                </div><!-- End .product -->
+                                                    </h3>&lt;!&ndash; End .product-title &ndash;&gt;
+                                                </div>&lt;!&ndash; End .product &ndash;&gt;
                                             </td>
                                             <td class="price-col">$84.00</td>
                                             <td class="quantity-col">
-                                                <div class="cart-product-quantity">8</div><!-- End .cart-product-quantity -->
+                                                <div class="cart-product-quantity">8</div>&lt;!&ndash; End .cart-product-quantity &ndash;&gt;
                                             </td>
                                             <td class="total-col">$84.00</td>
                                         </tr>
@@ -130,11 +130,11 @@
                                             <td colspan="2"><span><a href="" class="btn btn-primary float-right">Product received</a> </span></td>
                                         </tr>
                                         </tbody>
-                                    </table><!-- End .table table-wishlist -->
+                                    </table>&lt;!&ndash; End .table table-wishlist &ndash;&gt;
                                    </form>
                                 </div>
 
-                            </div><!-- .End .tab-pane -->
+                            </div>&lt;!&ndash; .End .tab-pane &ndash;&gt;
 
                             <div class="tab-pane fade" id="tab-buyer" role="tabpanel" aria-labelledby="tab-buyer">
 
@@ -155,85 +155,61 @@
                                                 <div class="product">
                                                     <h3 class="product-title">
                                                         <a href="#">Beige knitted elastic runner shoes</a>
-                                                    </h3><!-- End .product-title -->
-                                                </div><!-- End .product -->
+                                                    </h3>&lt;!&ndash; End .product-title &ndash;&gt;
+                                                </div>&lt;!&ndash; End .product &ndash;&gt;
                                             </td>
                                             <td class="price-col">$84.00</td>
                                             <td class="quantity-col">
-                                                <div class="cart-product-quantity">8</div><!-- End .cart-product-quantity -->
+                                                <div class="cart-product-quantity">8</div>&lt;!&ndash; End .cart-product-quantity &ndash;&gt;
                                             </td>
                                             <td class="total-col">$84.00</td>
                                             <td class="remove-col"><button class="btn-remove"><i class="icon-close"></i></button></td>
                                         </tr>
                                         </tbody>
-                                    </table><!-- End .table table-wishlist -->
+                                    </table>&lt;!&ndash; End .table table-wishlist &ndash;&gt;
                                 </div>
 
-                            </div><!-- .End .tab-pane -->
+                            </div>&lt;!&ndash; .End .tab-pane &ndash;&gt;
 
-
+-->
                             <div class="tab-pane fade" id="tab-address" role="tabpanel" aria-labelledby="tab-address-link">
                                 <p>The following addresses will be used on the checkout page by default.</p>
 
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="card card-dashboard">
-                                            <div class="card-body">
+                                            <div class="card-body" th:object="${userEntity}">
                                                 <h3 class="card-title">Billing Address</h3><!-- End .card-title -->
 
-                                                <p>User Name<br>
-                                                    User Company<br>
-                                                    John str<br>
-                                                    New York, NY 10001<br>
-                                                    1-234-987-6543<br>
-                                                    yourmail@mail.com<br>
-                                                    <a href="#">Edit <i class="icon-edit"></i></a></p>
+                                                <p th:text="${userEntity.username}"></p>
+                                                <p th:text="${userEntity.email}"></p>
+                                                <p th:text="${userEntity.phone}"></p>
+                                                   <!-- <a  data-toggle="tab" href="#tab-account" role="tab" aria-controls="tab-account" aria-selected="false" th:text="Edit">Edit <i class="icon-edit"></i></a>-->
                                             </div><!-- End .card-body -->
                                         </div><!-- End .card-dashboard -->
                                     </div><!-- End .col-lg-6 -->
 
-                                    <div class="col-lg-6">
+                                    <!--<div class="col-lg-6">
                                         <div class="card card-dashboard">
                                             <div class="card-body">
-                                                <h3 class="card-title">Shipping Address</h3><!-- End .card-title -->
+                                                <h3 class="card-title">Shipping Address</h3>&lt;!&ndash; End .card-title &ndash;&gt;
 
                                                 <p>You have not set up this type of address yet.<br>
                                                     <a href="#">Edit <i class="icon-edit"></i></a></p>
-                                            </div><!-- End .card-body -->
-                                        </div><!-- End .card-dashboard -->
-                                    </div><!-- End .col-lg-6 -->
+                                            </div>&lt;!&ndash; End .card-body &ndash;&gt;
+                                        </div>&lt;!&ndash; End .card-dashboard &ndash;&gt;
+                                    </div>&lt;!&ndash; End .col-lg-6 &ndash;&gt;-->
                                 </div><!-- End .row -->
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="tab-account" role="tabpanel" aria-labelledby="tab-account-link">
-                                <form action="#">
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <label>First Name *</label>
-                                            <input type="text" class="form-control" required="">
-                                        </div><!-- End .col-sm-6 -->
+                                <form method="post" action="/updateprofile" th:object="${userEntity}" >
 
-                                        <div class="col-sm-6">
-                                            <label>Last Name *</label>
-                                            <input type="text" class="form-control" required="">
-                                        </div><!-- End .col-sm-6 -->
-                                    </div><!-- End .row -->
+                                    <label for="phone">Phone</label>
+                                    <input type="text" name="phone"  th:field="${userEntity.phone}" class="form-control" >
 
-                                    <label>Display Name *</label>
-                                    <input type="text" class="form-control" required="">
-                                    <small class="form-text">This will be how your name will be displayed in the account section and in reviews</small>
-
-                                    <label>Email address *</label>
-                                    <input type="email" class="form-control" required="">
-
-                                    <label>Current password (leave blank to leave unchanged)</label>
-                                    <input type="password" class="form-control">
-
-                                    <label>New password (leave blank to leave unchanged)</label>
-                                    <input type="password" class="form-control">
-
-                                    <label>Confirm new password</label>
-                                    <input type="password" class="form-control mb-2">
+                                    <label for="email">Email</label>
+                                    <input type="text" name="email" th:field="${userEntity.email}" class="form-control">
 
                                     <button type="submit" class="btn btn-outline-primary-2">
                                         <span>SAVE CHANGES</span>
